crates/ir/tests/snapshots/lower_test__modules__stdlib_import.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__stdlib_import

extern java "krypton.runtime.KryptonIO" println(Object): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
import core/list/length as length(List[p]): Int
declare length: (List[p]) -> Int
declare println: (Object) -> Unit

fn main() -> Unit =
  let v0: ~List[Int] = construct List::Nil#1()
  let v1: ~List[Int] = construct List::Cons#0(3, v0)
  let v2: ~List[Int] = construct List::Cons#0(2, v1)
  let v3: ~List[Int] = construct List::Cons#0(1, v2)
  let v4: Int = call length(v3)
  let v5: Unit = call println(v4)
  v5
