crates/ir/tests/snapshots/lower_test__modules__type_qualify_trait.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module modules__type_qualify_trait

trait MyEq[o8] { my_eq(o8, o8): Bool }
instance modules__type_qualify_trait.MyEq[Int] { my_eq=MyEq$$Int$$my_eq }
extern java "krypton.runtime.KryptonIO" println(d8): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (d8) -> Unit

fn main() -> Unit =
  let v0: Dict[modules__type_qualify_trait.MyEq, Int] = get_dict modules__type_qualify_trait.MyEq[Int]
  let v1: Bool = trait_call modules__type_qualify_trait.MyEq.my_eq(v0, 42, 42)
  let v2: Unit = call println(v1)
  v2

fn MyEq$$Int$$my_eq(v3: Int, v4: Int) -> Bool =
  let v5: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v6: Bool = trait_call core/eq.Eq.eq(v5, v3, v4)
  v6
